Add a better update for submit auth
