# api/controllers/challenges.js
@@ -100,49 +100,5 @@ module.exports = {
         routeHelper.addError(req, err);
         next();
       });
-  },
-
-  submit: function(req, res, next) {
-
-    Submission.create({
-      challengeId: req.param('challengeId'),
-      submitterId: routeHelper.getSigninUser(req).id,
-      submitterHandle: routeHelper.getSigninUser(req).handle,
-      status: 'VALID',
-      createdBy: routeHelper.getSigninUser(req).id,
-      updatedBy: routeHelper.getSigninUser(req).id
-    })
-      .success(function(submission) {
-        var file = {
-          submissionId: submission.id,
-          fileUrl: req.param('fileUrl'),
-          size: req.param('fileSize'),
-          title: req.param('fileTitle'),
-          storageLocation: 'S3',
-          createdBy: routeHelper.getSigninUser(req).id,
-          updatedBy: routeHelper.getSigninUser(req).id
-        };
-
-        File.create(file)
-          .success(function(file) {
-            req.data = {
-              id: file.id,
-              result: {
-                success: true,
-                status: 200
-              }
-            };
-            next();
-          })
-          .error(function(err) {
-            routeHelper.addError(req, err);
-            next();
-          });
-
-      })
-      .error(function(err) {
-        routeHelper.addError(req, err);
-        next();
-      })
   }
 };
