# api/swagger/swagger.yaml
@@ -184,42 +184,6 @@ paths:
           description: Error
           schema:
             $ref: ErrorResponse
-  /challenges/{challengeId}/submit:
-    get:
-      tags:
-        - challenges
-      x-swagger-router-controller: challenges
-      description: Submit to a challenge
-      summary: Submit to a challenge
-      operationId: submit
-      parameters:
-        - name: challengeId
-          in: path
-          description: the id of the challenge
-          type: integer
-          format: int64
-          required: true
-        - name: fileTitle
-          in: query
-          description: The file title
-          required: true
-        - name: fileUrl
-          in: query
-          description: The file url
-          required: true
-        - name: fileSize
-          in: query
-          description: The file size
-          required: true
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: ActionResponse
-        default:
-          description: Error
-          schema:
-            $ref: ErrorResponse
   /challenges/{challengeId}/files:
     post:
       tags:
